--- a/index.html
+++ b/index.html
@@ -97,6 +97,21 @@
       <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank">Buy Now</a>
     </div>
 
+    
+<div class="product" data-name="Portable Electric Blender">
+  <img src="https://m.media-amazon.com/images/I/61p6deNk4rL._SL1185_.jpg" alt="Portable Blender">
+  <div class="title">Portable Electric Blender</div>
+  <div class="price">Under ₹1,500</div>
+  <a href="https://amzn.to/40sH4ik" class="buy" target="_blank">Buy Now</a>
+</div>
+
+<div class="product" data-name="Rechargeable Gas Lighter">
+  <img src="https://m.media-amazon.com/images/I/81LUFTHo1OL._SL1500_.jpg" alt="Rechargeable Gas Lighter">
+  <div class="title">Rechargeable Gas Lighter</div>
+  <div class="price">Under ₹600</div>
+  <a href="https://amzn.to/4ldjkra" class="buy" target="_blank">Buy Now</a>
+</div>
+    
     <div class="product" data-name="Sliding Tray">
       <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Sliding Tray">
       <div class="title">Sliding Tray</div>
