--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
   </style>
 </head>
 <body>
+  <nav style="background: #fff; box-shadow: 0 2px 4px rgba(0,0,0,0.1); padding: 10px 20px; display: flex; justify-content: space-between; align-items: center;">
+  <div style="font-weight: bold; color: #ff6f61; font-size: 20px;">KitchenLink</div>
+  <div>
+    <a href="index.html" style="margin: 0 10px; text-decoration: none; color: #333;">Home</a>
+    <a href="index.html#products" style="margin: 0 10px; text-decoration: none; color: #333;">Products</a>
+    <a href="meal-prep.html" style="margin: 0 10px; text-decoration: none; color: #ff6f61; font-weight: bold;">Meal Plan</a>
+  </div>
+  </nav>
   <header>
     <h1>KitchenLink – Smart Kitchen Gadgets</h1>
     <p>Your one-stop shop for smart & affordable tools</p>
