--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,162 +5,338 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>KitchenLink - Smart Gadgets Store</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      background-color: #fefefe;
-      color: #333;
     }
+
+    body {
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: #f9fafb;
+      color: #1f2a44;
+      line-height: 1.7;
+    }
+
+    nav {
+      background: #ffffff;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 1rem 1.5rem;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    nav .nav-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    nav .logo {
+      font-size: 1.5rem;
+      font-weight: 700;
+      color: #ff6f61;
+    }
+
+    nav .links {
+      display: flex;
+      gap: 1.5rem;
+    }
+
+    nav .links a {
+      text-decoration: none;
+      color: #1f2a44;
+      font-size: 1rem;
+      transition: color 0.3s ease;
+    }
+
+    nav .links a:hover,
+    nav .links a.active {
+      color: #ff6f61;
+      font-weight: 600;
+    }
+
+    .hamburger {
+      display: none;
+      font-size: 1.5rem;
+      background: none;
+      border: none;
+      color: #ff6f61;
+      cursor: pointer;
+    }
+
     header {
-      background-color: #2c3e50;
+      background: linear-gradient(135deg, #2c3e50 0%, #1a2634 100%);
       color: white;
-      padding: 1em;
       text-align: center;
+      padding: 3rem 1.5rem;
     }
+
     h1 {
-      margin: 0;
-      font-size: 1.8em;
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
     }
+
+    header p {
+      font-size: 1rem;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
     .search {
       text-align: center;
-      margin: 1em;
+      margin: 2rem 1.5rem;
     }
-    input[type="text"] {
-      width: 90%;
-      max-width: 400px;
-      padding: 10px;
-      border: 1px solid #ccc;
-      font-size: 1em;
+
+    .search input[type="text"] {
+      width: 100%;
+      max-width: 500px;
+      padding: 0.75rem;
+      border: 1px solid #e5e7eb;
+      border-radius: 8px;
+      font-size: 1rem;
+      transition: border-color 0.3s ease;
     }
+
+    .search input[type="text"]:focus {
+      outline: none;
+      border-color: #ff6f61;
+      box-shadow: 0 0 0 3px rgba(255, 111, 97, 0.2);
+    }
+
     .products {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1em;
-      padding: 1em;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
+      padding: 1.5rem;
+      max-width: 1200px;
+      margin: 0 auto;
     }
+
     .product {
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      width: 250px;
-      padding: 1em;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      background: #ffffff;
+      border: 1px solid #e5e7eb;
+      border-radius: 12px;
+      padding: 1.5rem;
       text-align: center;
-      transition: transform 0.3s;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
     }
+
     .product:hover {
       transform: translateY(-5px);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.1);
     }
+
     .product img {
       width: 100%;
-      height: auto;
+      height: 200px;
+      object-fit: cover;
       border-radius: 8px;
+      margin-bottom: 1rem;
     }
+
     .title {
-      font-size: 1.1em;
-      margin: 0.5em 0;
-      font-weight: bold;
+      font-size: 1.2rem;
+      font-weight: 600;
+      margin-bottom: 0.5rem;
     }
+
     .price {
       color: #16a085;
-      margin: 0.5em 0;
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
     }
+
     .buy {
       display: inline-block;
-      padding: 0.6em 1.2em;
+      padding: 0.75rem 1.5rem;
       background: #e67e22;
       color: white;
-      border-radius: 5px;
+      border-radius: 8px;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
+      transition: background-color 0.3s ease;
+    }
+
+    .buy:hover {
+      background: #d35400;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1.5rem;
+      background: #e5e7eb;
+      font-size: 0.9rem;
+      color: #4b5563;
+      margin-top: 2rem;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      nav .links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        padding: 1rem 0;
+      }
+
+      nav .links.active {
+        display: flex;
+      }
+
+      nav .hamburger {
+        display: block;
+      }
+
+      h1 {
+        font-size: 1.5rem;
+      }
+
+      .products {
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      }
+
+      .product img {
+        height: 180px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.25rem;
+      }
+
+      .search input[type="text"] {
+        font-size: 0.9rem;
+      }
+
+      .product {
+        padding: 1rem;
+      }
+
+      .product img {
+        height: 150px;
+      }
+
+      .title {
+        font-size: 1rem;
+      }
+
+      .price {
+        font-size: 0.95rem;
+      }
+
+      .buy {
+        padding: 0.6rem 1.2rem;
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
 <body>
-  <nav style="background: #fff; box-shadow: 0 2px 4px rgba(0,0,0,0.1); padding: 10px 20px; display: flex; justify-content: space-between; align-items: center;">
-  <div style="font-weight: bold; color: #ff6f61; font-size: 20px;">KitchenLink</div>
-  <div>
-    <a href="index.html" style="margin: 0 10px; text-decoration: none; color: #333;">Home</a>
-    <a href="index.html#products" style="margin: 0 10px; text-decoration: none; color: #333;">Products</a>
-    <a href="meal-prep.html" style="margin: 0 10px; text-decoration: none; color: #ff6f61; font-weight: bold;">Meal Plan</a>
-  </div>
+  <nav role="navigation">
+    <div class="nav-container">
+      <div class="logo" aria-label="KitchenLink Logo">KitchenLink</div>
+      <button class="hamburger" aria-label="Toggle menu">☰</button>
+      <div class="links">
+        <a href="index.html" class="active">Home</a>
+        <a href="index.html#products">Products</a>
+        <a href="meal-prep.html">Meal Plan</a>
+      </div>
+    </div>
   </nav>
-  <header>
+
+  <header role="banner">
     <h1>KitchenLink – Smart Kitchen Gadgets</h1>
     <p>Your one-stop shop for smart & affordable tools</p>
   </header>
 
   <div class="search">
-    <input type="text" id="searchInput" placeholder="Search gadgets...">
+    <input type="text" id="searchInput" placeholder="Search gadgets..." aria-label="Search kitchen gadgets">
   </div>
 
-  <div class="products" id="productList">
+  <main class="products" id="productList" role="region" aria-label="Product list">
     <div class="product" data-name="Philips Air Fryer">
-      <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Air Fryer">
-      <div class="title">PHILIPS Air Fryer</div>
-      <div class="price">Upto ₹10,000</div>
-      <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank">Buy Now</a>
+      <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
+      <div class="title">Philips Air Fryer</div>
+      <div class="price">Up to ₹10,000</div>
+      <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank" rel="noopener">Buy Now</a>
     </div>
 
-    
-<div class="product" data-name="Portable Electric Blender">
-  <img src="https://m.media-amazon.com/images/I/61p6deNk4rL._SL1185_.jpg" alt="Portable Blender">
-  <div class="title">Portable Electric Blender</div>
-  <div class="price">Under ₹1,500</div>
-  <a href="https://amzn.to/40sH4ik" class="buy" target="_blank">Buy Now</a>
-</div>
+    <div class="product" data-name="Portable Electric Blender">
+      <img src="https://m.media-amazon.com/images/I/61p6deNk4rL._SL1185_.jpg" alt="Portable Electric Blender">
+      <div class="title">Portable Electric Blender</div>
+      <div class="price">Under ₹1,500</div>
+      <a href="https://amzn.to/40sH4ik" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
 
-<div class="product" data-name="Rechargeable Gas Lighter">
-  <img src="https://m.media-amazon.com/images/I/81LUFTHo1OL._SL1500_.jpg" alt="Rechargeable Gas Lighter">
-  <div class="title">Rechargeable Gas Lighter</div>
-  <div class="price">Under ₹600</div>
-  <a href="https://amzn.to/4ldjkra" class="buy" target="_blank">Buy Now</a>
-</div>
-    
+    <div class="product" data-name="Rechargeable Gas Lighter">
+      <img src="https://m.media-amazon.com/images/I/81LUFTHo1OL._SL1500_.jpg" alt="Rechargeable Gas Lighter">
+      <div class="title">Rechargeable Gas Lighter</div>
+      <div class="price">Under ₹600</div>
+      <a href="https://amzn.to/4ldjkra" class="buy" target="_blank" rel="noopener">Buy Now</a>
+    </div>
+
     <div class="product" data-name="Sliding Tray">
       <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Sliding Tray">
       <div class="title">Sliding Tray</div>
       <div class="price">Under ₹1,000</div>
-      <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank">Buy Now</a>
+      <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
     </div>
 
     <div class="product" data-name="Vacuum Sealer">
       <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Vacuum Sealer">
       <div class="title">Vacuum Sealer</div>
-      <div class="price">Upto ₹2,500</div>
-      <a href="https://amzn.to/3SVcs54" class="buy" target="_blank">Buy Now</a>
+      <div class="price">Up to ₹2,500</div>
+      <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
     </div>
 
     <div class="product" data-name="Mini Sealing Machine">
       <img src="https://m.media-amazon.com/images/I/71utCY3f-JL._UF894,1000_QL80_FMwebp_.jpg" alt="Mini Sealing Machine">
       <div class="title">Mini Sealing Machine</div>
       <div class="price">Under ₹500</div>
-      <a href="https://amzn.to/4k1PTqE" class="buy" target="_blank">Buy Now</a>
+      <a href="https://amzn.to/4k1PTqE" class="buy" target="_blank" rel="noopener">Buy Now</a>
     </div>
 
     <div class="product" data-name="Kitchen Mat">
       <img src="https://m.media-amazon.com/images/I/619hMFvYSoL._UF894,1000_QL80_FMwebp_.jpg" alt="Kitchen Mat">
       <div class="title">Kitchen Mat</div>
       <div class="price">Under ₹700</div>
-      <a href="https://amzn.to/3HG0ry2" class="buy" target="_blank">Buy Now</a>
+      <a href="https://amzn.to/3HG0ry2" class="buy" target="_blank" rel="noopener">Buy Now</a>
     </div>
 
     <div class="product" data-name="Knife Sharpener">
       <img src="https://m.media-amazon.com/images/I/610WnGc6kPL._UF894,1000_QL80_FMwebp_.jpg" alt="Knife Sharpener">
       <div class="title">Knife Sharpener</div>
       <div class="price">Under ₹300</div>
-      <a href="https://amzn.to/45TExRW" class="buy" target="_blank">Buy Now</a>
+      <a href="https://amzn.to/45TExRW" class="buy" target="_blank" rel="noopener">Buy Now</a>
     </div>
-  </div>
+  </main>
+
+  <footer role="contentinfo">
+    © 2025 KitchenLink | Smart Content for Smart Homes
+  </footer>
 
   <script>
-    const input = document.getElementById('searchInput');
+    const hamburger = document.querySelector('.hamburger');
+    const navLinks = document.querySelector('.links');
+    const searchInput = document.getElementById('searchInput');
     const products = document.querySelectorAll('.product');
 
-    input.addEventListener('input', () => {
-      const query = input.value.toLowerCase();
+    // Hamburger menu toggle
+    hamburger.addEventListener('click', () => {
+      navLinks.classList.toggle('active');
+      hamburger.textContent = navLinks.classList.contains('active') ? '✕' : '☰';
+    });
+
+    // Search functionality
+    searchInput.addEventListener('input', () => {
+      const query = searchInput.value.toLowerCase();
       products.forEach(product => {
         const name = product.getAttribute('data-name').toLowerCase();
         product.style.display = name.includes(query) ? 'block' : 'none';
