--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
       text-align: center;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      display: flex;
+      flex-direction: column;
     }
 
     .product:hover {
@@ -132,12 +134,36 @@
       box-shadow: 0 6px 12px rgba(0,0,0,0.1);
     }
 
-    .product img {
+    /* Improved image container */
+    .image-container {
+      position: relative;
       width: 100%;
-      height: 200px;
-      object-fit: cover;
+      padding-top: 100%; /* Creates a square container */
+      overflow: hidden;
       border-radius: 8px;
+      background: #f8f9fa;
       margin-bottom: 1rem;
+    }
+
+    .image-container img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* Ensures entire image is visible */
+      padding: 10px;
+      transition: transform 0.3s ease;
+    }
+
+    .product:hover .image-container img {
+      transform: scale(1.05);
+    }
+
+    .product-content {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
     }
 
     .title {
@@ -161,6 +187,7 @@
       text-decoration: none;
       font-weight: 600;
       transition: background-color 0.3s ease;
+      margin-top: auto; /* Pushes button to bottom */
     }
 
     .buy:hover {
@@ -200,10 +227,6 @@
       .products {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       }
-
-      .product img {
-        height: 180px;
-      }
     }
 
     @media (max-width: 480px) {
@@ -217,10 +240,6 @@
 
       .product {
         padding: 1rem;
-      }
-
-      .product img {
-        height: 150px;
       }
 
       .title {
@@ -262,59 +281,91 @@
 
   <main class="products" id="productList" role="region" aria-label="Product list">
     <div class="product" data-name="Philips Air Fryer">
-      <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
-      <div class="title">Philips Air Fryer</div>
-      <div class="price">Up to ₹10,000</div>
-      <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      <div class="image-container">
+        <img src="https://m.media-amazon.com/images/I/414ly0wsjYL._SL1000_.jpg" alt="Philips Air Fryer">
+      </div>
+      <div class="product-content">
+        <div class="title">Philips Air Fryer</div>
+        <div class="price">Up to ₹10,000</div>
+        <a href="https://amzn.to/4kgzH4R" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      </div>
     </div>
 
     <div class="product" data-name="Portable Electric Blender">
-      <img src="https://m.media-amazon.com/images/I/61p6deNk4rL._SL1185_.jpg" alt="Portable Electric Blender">
-      <div class="title">Portable Electric Blender</div>
-      <div class="price">Under ₹1,500</div>
-      <a href="https://amzn.to/40sH4ik" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      <div class="image-container">
+        <img src="https://m.media-amazon.com/images/I/61p6deNk4rL._SL1185_.jpg" alt="Portable Electric Blender">
+      </div>
+      <div class="product-content">
+        <div class="title">Portable Electric Blender</div>
+        <div class="price">Under ₹1,500</div>
+        <a href="https://amzn.to/40sH4ik" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      </div>
     </div>
 
     <div class="product" data-name="Rechargeable Gas Lighter">
-      <img src="https://m.media-amazon.com/images/I/81LUFTHo1OL._SL1500_.jpg" alt="Rechargeable Gas Lighter">
-      <div class="title">Rechargeable Gas Lighter</div>
-      <div class="price">Under ₹600</div>
-      <a href="https://amzn.to/4ldjkra" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      <div class="image-container">
+        <img src="https://m.media-amazon.com/images/I/81LUFTHo1OL._SL1500_.jpg" alt="Rechargeable Gas Lighter">
+      </div>
+      <div class="product-content">
+        <div class="title">Rechargeable Gas Lighter</div>
+        <div class="price">Under ₹600</div>
+        <a href="https://amzn.to/4ldjkra" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      </div>
     </div>
 
     <div class="product" data-name="Sliding Tray">
-      <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Sliding Tray">
-      <div class="title">Sliding Tray</div>
-      <div class="price">Under ₹1,000</div>
-      <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      <div class="image-container">
+        <img src="https://m.media-amazon.com/images/I/61rUIJtyEkL._UF1000,1000_QL80_FMwebp_.jpg" alt="Sliding Tray">
+      </div>
+      <div class="product-content">
+        <div class="title">Sliding Tray</div>
+        <div class="price">Under ₹1,000</div>
+        <a href="https://amzn.to/3SS1XQ4" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      </div>
     </div>
 
     <div class="product" data-name="Vacuum Sealer">
-      <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Vacuum Sealer">
-      <div class="title">Vacuum Sealer</div>
-      <div class="price">Up to ₹2,500</div>
-      <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      <div class="image-container">
+        <img src="https://m.media-amazon.com/images/I/71QkgEBOZiL._UF894,1000_QL80_FMwebp_.jpg" alt="Vacuum Sealer">
+      </div>
+      <div class="product-content">
+        <div class="title">Vacuum Sealer</div>
+        <div class="price">Up to ₹2,500</div>
+        <a href="https://amzn.to/3SVcs54" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      </div>
     </div>
 
     <div class="product" data-name="Mini Sealing Machine">
-      <img src="https://m.media-amazon.com/images/I/71utCY3f-JL._UF894,1000_QL80_FMwebp_.jpg" alt="Mini Sealing Machine">
-      <div class="title">Mini Sealing Machine</div>
-      <div class="price">Under ₹500</div>
-      <a href="https://amzn.to/4k1PTqE" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      <div class="image-container">
+        <img src="https://m.media-amazon.com/images/I/71utCY3f-JL._UF894,1000_QL80_FMwebp_.jpg" alt="Mini Sealing Machine">
+      </div>
+      <div class="product-content">
+        <div class="title">Mini Sealing Machine</div>
+        <div class="price">Under ₹500</div>
+        <a href="https://amzn.to/4k1PTqE" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      </div>
     </div>
 
     <div class="product" data-name="Kitchen Mat">
-      <img src="https://m.media-amazon.com/images/I/619hMFvYSoL._UF894,1000_QL80_FMwebp_.jpg" alt="Kitchen Mat">
-      <div class="title">Kitchen Mat</div>
-      <div class="price">Under ₹700</div>
-      <a href="https://amzn.to/3HG0ry2" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      <div class="image-container">
+        <img src="https://m.media-amazon.com/images/I/619hMFvYSoL._UF894,1000_QL80_FMwebp_.jpg" alt="Kitchen Mat">
+      </div>
+      <div class="product-content">
+        <div class="title">Kitchen Mat</div>
+        <div class="price">Under ₹700</div>
+        <a href="https://amzn.to/3HG0ry2" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      </div>
     </div>
 
     <div class="product" data-name="Knife Sharpener">
-      <img src="https://m.media-amazon.com/images/I/610WnGc6kPL._UF894,1000_QL80_FMwebp_.jpg" alt="Knife Sharpener">
-      <div class="title">Knife Sharpener</div>
-      <div class="price">Under ₹300</div>
-      <a href="https://amzn.to/45TExRW" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      <div class="image-container">
+        <img src="https://m.media-amazon.com/images/I/610WnGc6kPL._UF894,1000_QL80_FMwebp_.jpg" alt="Knife Sharpener">
+      </div>
+      <div class="product-content">
+        <div class="title">Knife Sharpener</div>
+        <div class="price">Under ₹300</div>
+        <a href="https://amzn.to/45TExRW" class="buy" target="_blank" rel="noopener">Buy Now</a>
+      </div>
     </div>
   </main>
 
