--- a/meal-prep.html
+++ b/meal-prep.html
@@ -197,6 +197,11 @@
         <a href="index.html">Home</a>
         <a href="index.html#products">Products</a>
         <a href="meal-prep.html" class="active">Meal Plan</a>
+        <ul>
+          <li>
+            <a href="office-meal-plan.html">Office Meal Plan</a></li>
+        </ul>
+            
       </div>
     </div>
   </nav>
