--- a/office-meal-plan.html
+++ b/office-meal-plan.html
@@ -421,7 +421,24 @@
   </style>
 </head>
 <body>
-
+<nav role="navigation">
+  <div class="nav-container">
+    <div class="logo" aria-label="KitchenLink Logo">KitchenLink</div>
+    <button class="hamburger" aria-label="Toggle menu">☰</button>
+    <div class="links">
+      <a href="index.html" class="active">Home</a>
+      <a href="index.html#products">Products</a>
+      <div class="dropdown">
+        <a href="meal-prep.html">Meal Plans ▾</a>
+        <div class="dropdown-content">
+          <a href="meal-prep.html">Budget Plan</a>
+        </br>
+          <a href="office-meal-plan.html">Office Plan</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
   <header>
     <i class="decoration fork fas fa-utensils"></i>
     <i class="decoration knife fas fa-utensil-spoon"></i>
