--- a/meal-prep.html
+++ b/meal-prep.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Budget Meal Prep – KitchenLink</title>
+  <link rel="stylesheet" href="style.css">
   <style>
     * {
       box-sizing: border-box;
@@ -91,102 +92,6 @@
       border: none;
       color: #ff6f61;
       cursor: pointer;
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 2rem auto;
-      padding: 0 1.5rem;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1.5rem;
-      background: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-    }
-
-    th, td {
-      border: 1px solid #e5e7eb;
-      padding: 1rem;
-      text-align: center;
-      font-size: 0.95rem;
-    }
-
-    th {
-      background: #fff3f3;
-      color: #1f2a44;
-      font-weight: 600;
-    }
-
-    tr:nth-child(even) {
-      background: #f9fafb;
-    }
-
-    section {
-      margin-bottom: 3rem;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1.5rem;
-      background: #e5e7eb;
-      font-size: 0.9rem;
-      color: #4b5563;
-      margin-top: 2rem;
-    }
-
-    /* Mobile Menu */
-    @media (max-width: 768px) {
-      nav .links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        padding: 1rem 0;
-      }
-
-      nav .links.active {
-        display: flex;
-      }
-
-      nav .hamburger {
-        display: block;
-      }
-
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      h2 {
-        font-size: 1.25rem;
-      }
-
-      th, td {
-        font-size: 0.85rem;
-        padding: 0.75rem;
-      }
-
-      table {
-        font-size: 0.9rem;
-      }
-    }
-
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.25rem;
-      }
-
-      p {
-        font-size: 0.9rem;
-      }
-
-      th, td {
-        font-size: 0.8rem;
-        padding: 0.5rem;
-      }
-    }
-  </style>
 </head>
 <body>
   <nav role="navigation">
