--- a/office-meal-plan.html
+++ b/office-meal-plan.html
@@ -423,23 +423,23 @@
 </head>
 <body>
 <nav role="navigation">
-  <div class="nav-container">
-    <div class="logo" aria-label="KitchenLink Logo">KitchenLink</div>
-    <button class="hamburger" aria-label="Toggle menu">☰</button>
-    <div class="links">
-      <a href="index.html" class="active">Home</a>
-      <a href="index.html#products">Products</a>
-      <div class="dropdown">
-        <a href="meal-prep.html">Meal Plans ▾</a>
-        <div class="dropdown-content">
-          <a href="meal-prep.html">Budget Plan</a>
-        </br>
-          <a href="office-meal-plan.html">Office Plan</a>
+<nav role="navigation">
+        <div class="nav-container">
+            <div class="logo" aria-label="KitchenLink Logo">KitchenLink</div>
+            <button class="hamburger" aria-label="Toggle menu">☰</button>
+            <div class="links">
+                <a href="index.html">Home</a>
+                <a href="index.html#products">Products</a>
+                <div class="dropdown">
+                    <button class="dropbtn">Meal Plans <i class="fas fa-caret-down"></i></button>
+                    <div class="dropdown-content">
+                        <a href="meal-prep.html">Budget Plan</a>
+                        <a href="office-meal-plan.html">Office Plan</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-</nav>
+    </nav>
   <header>
     <i class="decoration fork fas fa-utensils"></i>
     <i class="decoration knife fas fa-utensil-spoon"></i>
