--- a/office-meal-plan.html
+++ b/office-meal-plan.html
@@ -264,7 +264,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer role="contentinfo">
         <div class="footer-content">
             <div class="footer-column">
                 <h3>KitchenLink</h3>
@@ -279,7 +279,7 @@
             <div class="footer-column">
                 <h3>Meal Plans</h3>
                 <ul class="footer-links">
-                    <li><a href="#"><i class="fas fa-chevron-right"></i> Office Meal Plans</a></li>
+                    <li><a href="office-meal-plan.html"><i class="fas fa-chevron-right"></i> Office Meal Plans</a></li>
                     <li><a href="#"><i class="fas fa-chevron-right"></i> Weight Loss Plans</a></li>
                     <li><a href="#"><i class="fas fa-chevron-right"></i> Vegetarian Plans</a></li>
                     <li><a href="#"><i class="fas fa-chevron-right"></i> High-Protein Plans</a></li>
